--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 <!DOCTYPE html>
+<html lang="fr" x-data="{ menuIsOpen: false }" :class="menuIsOpen && 'noscroll'">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="src/css/style.css">
+        <!-- Chargement de la librairie Alpine JS -->
+        <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
+        <title>Replicant</title>
+    </head>
+    <body>
+        <header>
+
+        </header>
+        <main>
+            
+        </main>
+        <footer>
+            
+        </footer>
+    </body>
+
+</html>
