--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/css/style.css">
     <!-- Chargement de la librairie Alpine JS -->
     <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
-    <title>replicant</title>
+    <title>Replicant</title>
 </head>
 
     <body>
@@ -79,11 +79,11 @@
 
         <main class="marge-top marge">
             
-            <h1>Replicant
-                "Raison & Sentiments"</h1>
+            <h1 class="center">Replicant</h1>
 
+            <h2 class="center">"Raison & Sentiments"</h2>   
 
-            <h2>Introduction</h2>
+            <h3>Introduction</h3>
             <p>
                 Ce site internet traite du sujet de l’intelligence artificielle,
                 aussi appelée “IA”. J’étudie la possibilité que les robots
@@ -94,20 +94,20 @@
             </p>
 
             <article class="article">
-                <h2 class="article__title">Chappie</h2>
+                <h3 class="article__title">Chappie</h3>
                 <div class="article__content">
                     <img src="public/img/Chappie 1.webp" alt="affiche film chappie">
                     <div class="article__text">
                         <p>Chappie est un film américain de
                             science-fiction réalisé par Neill
                             Blomkamp en mars 2015. </p>
-                        <a class="article__btn" href="chappie.html">Lire la suite</a>
+                        <a class="article__btn carre" href="chappie.html">Lire la suite</a>
                      </div>
                 </div>
             </article>
 
             <article class="article">
-                <h2 class="article__title">Blade Runner</h2>
+                <h3 class="article__title">Blade Runner</h3>
                 <div class="article__content">
                     <img src="public/img/bladerunner.webp" alt="affiche livre blade runner">
                     <div class="article__text">
@@ -116,20 +116,20 @@
                             Dick en 1966. Son titre original
                             est “Do Androids Dream of
                             Electric Sheep?”</p>
-                        <a class="article__btn" href="bladerunner.html">Lire la suite</a>
+                        <a class="article__btn carre" href="bladerunner.html">Lire la suite</a>
                      </div>
                 </div>
             </article>
 
             <article class="article">
-                <h2 class="article__title">Un robot peut-il avoir des sentiments ?</h2>
+                <h3 class="article__title">Un robot peut-il avoir des sentiments ?</h3>
                 <div class="article__content">
-                    <img src="public/img/robot.webp" alt=image robot">
+                    <img src="public/img/robot.webp" alt="image robot">
                     <div class="article__text">
                         <p>Je veux “étudier” le fait que les
                             robots puissent avoir et ressentir
                             des émotions. </p>
-                        <a class="article__btn" href="robot.html">Lire la suite</a>
+                        <a class="article__btn carre" href="robot.html">Lire la suite</a>
                      </div>
                 </div>
             </article>
@@ -138,15 +138,13 @@
 
         <br>
         <br>
+        <br>
 
         <footer class="footer center">
             <p> PierrePolJ </p>
-
-            <p> <span> PierrePolJ@univ-fcomte.fr</span></p> 
+            <p> <span><a class="footer__mail" href="mailto:PierrePolJ@univ-fcomte.fr">PierrePolJ@univ-fcomte.fr</a> </span></p> 
             <p>   Projet réalisé dans le cadre d’un exercice pédagogique
-                au département <span>MMI de Montbéliard </span> </p>
-
-            
+                au département <span><a class="footer__link" href="http://mmimontbeliard.com/">MMI de Montbéliard</a> </span> </p>
 
         </footer>
     </body>
