--- a/bladerunner.html
+++ b/bladerunner.html
@@ -83,9 +83,11 @@
 
             <h2 class="center">"Raison & Sentiments"</h2>   
 
-            <h2 class="center">Blade Runner</h2>
-
             
+            <div class="center">
+                <h2 class="carre-black color-white">Blade Runner</h2>
+            </div>
+            <br>
                 <article class="article">
                     <div class="article__content">
                         <img class="article__img" src="public/img/bladerunner.webp" alt="affiche film chappie">
