--- a/apropos.html
+++ b/apropos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/css/style.css">
     <!-- Chargement de la librairie Alpine JS -->
     <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
-    <title>Replicant</title>
+    <title>Replicant - A propos</title>
 </head>
 
     <body>
