--- a/autreprojet.html
+++ b/autreprojet.html
@@ -82,11 +82,61 @@
             <h1 class="center">Replicant</h1>
 
             <h2 class="center">"Raison & Sentiments"</h2>  
-            <div class="center">
-                <h2 class="carre-black color-white">À propos</h2>
+            <div class="center ">
+                <h2 class="carre-black no-deco">Autres Projets</h2>
             </div>
             <br>
-
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">La vie des singes - Natacha VOGELSPERGER</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class="  no-deco" href="#">Au temps des vikings - Hugo DELCEY</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">La horde typographique - Antonin LAINE </a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">Le monde d'Hunger Games - Antonin PAUTROT</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">Deadline - Paco DE CARVALHO</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">Skim - Bastien LANFRAY</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">Pourquoi tuer ? - Angélique LAMBOLEY</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">Caedere - Mathilde DENISAR</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">L'ère Escobur - Ali ELKAILANI</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">Futuristic Love - Quentin LAFORGE</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">Werewolfdef - Carlos DESBROSSE</a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">L'enfance pendant la guerre - Axel PENCEY </a>
+            </div>
+            <br>
+            <div class="center carre-gray">
+                <a class=" no-deco" href="#">Les femmes aux combats - Guillaume WALTER</a>
+            </div>
         </main>
         <br>
         <br>
