--- a/robot.html
+++ b/robot.html
@@ -104,8 +104,12 @@
                          </div>
                     </div>
                 </article>
-                <p>“L’homme qui vivra mille ans est déjà né.”
-                    Laurent</p>
+                <blockquote>
+                    <p> “L’homme qui vivra mille ans est déjà né.”</p>
+                    <footer class="italic">
+                        Laurent
+                    </footer>
+                    </blockquote>
 
                 <article>
                     <h3>Un robot, qu’est-ce que c’est ?
